<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="names_text">"Add Name"</string>
    <string name="to_names_button">"Add Names"</string>
    <string name="to_correct_button">"Correct Text"</string>
    <string name="names_button">"Add"</string>
    <string name="names_list">"Name List"</string>
    <string name="names_prompt">"Enter name"</string>
    <string name="names_delete">"Delete"</string>
    <string name="names_done">"Done"</string>
    <string name="correct_activity_title">Correct Text</string>
    <string name="correct_prices">Prices</string>
    <string name="correct_add_prices">Add Prices</string>
    <string name="correct_continue">Continue</string>
    <string name="verify_start_over">Start Over</string>
    <string name="verify_flash">Flash</string>
    <string name="verify_append_prices">Read More Prices</string>
    <string name="verify_add_a_price">Add A Price</string>
    <string name="verify_continue">Add Payers</string>
    <string name="select_contact_button">Select From Contacts</string>
    <string name="select_manual_add">Add</string>
    <string name="select_manual_type">Type Payer Name</string>
    <string name="select_continue">Split Check</string>
    <string name="split_continue">Next</string>
</resources>
