<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NameList">

    <EditText
        android:id="@+id/names_prompt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/names_prompt"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/names_button"
        android:singleLine="true"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/names_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/names_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/names_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/names_prompt" />

    <ListView
        android:id="@+id/names_list"
        style="@style/Widget.AppCompat.ListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:choiceMode="singleChoice"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="true"
        android:listSelector="#666666"
        app:layout_constraintBottom_toTopOf="@+id/names_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/names_prompt" />

    <ToggleButton
        android:id="@+id/names_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/names_delete"
        android:textOff="@string/names_delete"
        android:textOn="@string/names_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/names_done"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/names_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/names_done"
        app:layout_constraintBaseline_toBaselineOf="@+id/names_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/names_delete" />
</android.support.constraint.ConstraintLayout>